# Phased-Array-Antenna-Model

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  GLOSSARY.md  Generating_Rectangular_and_Offset_Triangular_Grid_of_Phased_Array_Elements_within_an_Elliptical_Boundary.ipynb  LICENSE  Phased_Array_Antennas_Computing_Radiation_Patterns_Using_Python.ipynb  Phased_Array_Demo.ipynb  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: Makefile  conf.py  glossary.rst  index.rst  requirements.txt  troubleshooting.rst
docs/_build/html/: .buildinfo  genindex.html  glossary.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  troubleshooting.html
docs/_build/html/.doctrees/: glossary.doctree  index.doctree  troubleshooting.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_sources/: troubleshooting.rst.txt
docs/_build/html/api/: beamforming.html  core.html  export.html  geometry.html  impairments.html  index.html  utils.html  visualization.html  wideband.html
docs/_build/html/cookbook/: index.html  (+3 more)
docs/api/: core.rst  export.rst  geometry.rst  impairments.rst  utils.rst  wideband.rst
docs/cookbook/: systems_recipes.rst
docs/getting_started/: concepts.rst  index.rst
docs/user_guide/: geometry.rst  visualization.rst  wideband.rst
phased_array/: __init__.py  beamforming.py  coordinates.py  core.py  export.py  geometry.py  impairments.py  polarization.py  utils.py  visualization.py  wideband.py
phased_array_modeling.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
streamlit_app/: app.py  requirements.txt
streamlit_app/pages/: 1_Array_Design.py  2_Beam_Steering.py  3_Tapering.py  4_Impairments.py  5_UV_Space.py  6_Wideband_TTD.py
tests/: __init__.py  test_beamforming.py  test_coordinates.py  test_core.py  test_export.py  test_geometry.py  test_impairments.py  test_polarization.py  test_wideband.py
(+64 files in other folders)
